cards horizontal layout, edited comments template in showpost.tmpl

--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -18,6 +18,12 @@ label {
 	max-height: 500px;
 }
 
+.comment-card {
+	max-width: 700px;
+	width: 85%;
+	max-height: 500px;
+}
+
 .card-text {
 	overflow: hidden;
 	text-overflow: ellipsis;
