--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -17,6 +17,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/js/myscript.js" defer></script>
 
         <!-- Local CSS -->
         <link rel="stylesheet" href="/static/css/mystyle.css">
