--- a/ui/html/showcat.page.tmpl
+++ b/ui/html/showcat.page.tmpl
@@ -1,117 +1,64 @@
 {{template "base" .}}
 
 {{define "head"}}
-	{{block "post-css" .}}
-	{{end}}
+{{block "post-css" .}}
+{{end}}
 {{end}}
 
 {{define "body"}}
 <div>
-	<a href="?col=votes">Votes</a>
-	<a href="?col=created">Time</a>
-	<div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-2 justify-content-start">
-		{{range .Posts}}
-			<div class="col" id="{{.ID}}">
-				<div class="card border-warning category-card h-100">
-					<div class="row no-gutters">
-						<div class="col-md-3">
-							<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
-								<input value="{{.ID}}" hidden>
-								<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button')">
-									<i class="bi bi-caret-up"></i>
-								</button>
-							</form>
-				
-							<p name="votes" class="votes" value="0">{{.Votes}}</p>
-				
-							<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
-								<input value="{{.ID}}" hidden>
-								<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button')">
-									<i class="bi bi-caret-down"></i>
-								</button>
-							</form>
-						</div>
-						<div class="col-md-9">
-							<div class="card-body">
-								<a href="/post/{{.ID}}"><h5 class="card-title">{{.Title}}</h5></a>
-								<p class="card-text">{{.Content}}</p>
-							</div>
-						</div>
-					</div>
-					
-					<div class="card-footer">
-						<small class="text-muted">11 comments</small>
-					</div>
-				</div>
-			</div>
-		{{end}}
+	<a href="?col=top">Top</a>
+	{{if eq .Sort "top"}}
+	<div>
+		<a href="?col=top&time=1">Day</a>
+		<a href="?col=top&time=7">Week</a>
+		<a href="?col=top&time=31">Month</a>
+		<a href="?col=top&time=365">Year</a>
 	</div>
+	<a href="?col=created">New</a>
+	{{end}}
+	{{range .Posts}}
+	<div class="commente">
+		{{if $.AuthenticatedUser}}
+		<div class="comment-upvote">
+			<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
+				<input value="{{.ID}}" hidden>
+				<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button')">
+					<i class="bi bi-caret-up"></i>
+				</button>
+			</form>
+		</div>
+		<div class="comment-downvote">
+			<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
+				<input value="{{.ID}}" hidden>
+				<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button')">
+					<i class="bi bi-caret-down"></i>
+				</button>
+			</form>
+		</div>
+		{{else}}
+		<div class="comment-upvote">
+			<a href="/login">
+				<button type="submit" class="btn btn-primary">
+					<i class="bi bi-caret-up"></i>
+				</button>
+			</a>
+		</div>
+		<div class="comment-downvote">
+			<a href="/login">
+				<button type="submit" class="btn btn-primary">
+					<i class="bi bi-caret-down"></i>
+				</button>
+			</a>
+		</div>
+		{{end}}
+
+			<div class="comment-username">Posted by {{.User}}</div>
+			<p name="votes" class="votes" value="0">{{.Votes}}</p>
+			<div class="comment-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
+			<div class="comment-comments">8 comments</div>
+	</div>
+	{{end}}
 </div>
-{{end}}
-
-{{define "js"}}
-	<script>
-		let votes = document.querySelector('#uservotes').innerText;
-		votes = votes.split(`]`).slice(0,2);
-		const upvotes = votes[0].slice(2).split(' ');
-		const downvotes = votes[1].slice(2).split(' ');
-		for (const post of upvotes) {
-			let button = document.querySelector(`#form-up-${post} button`);
-			button.classList.add("active");
-		}
-		for (const post of downvotes) {
-			let button = document.querySelector(`#form-down-${post} button`);
-			button.classList.add("active");
-		}
-		function vote(id, which) {
-			let post = document.getElementById(id);
-			let button = post.getElementsByClassName(which)[0];
-			let vote = post.getElementsByClassName("votes")[0];
-			let curVotes = parseInt(vote.innerHTML);
-			let number = 1
-			let otherbutton = post.getElementsByClassName('down-button')[0];
-
-			if (which == 'down-button') {
-				number = -1;
-				otherbutton = post.getElementsByClassName('up-button')[0];
-			};
-
-			if (button.classList.contains("active")) {
-				number *= -1;
-				button.classList.remove("active");
-				console.log(button)
-			} else {
-				button.classList.add("active");
-				console.log(button)
-			}
-
-			if (otherbutton.classList.contains("active")) {
-				otherbutton.classList.remove("active");
-				vote.innerHTML = curVotes + (number*2);
-			} else {
-				vote.innerHTML = curVotes + number
-			}
-		}
-
-		function fetchpost (id, updown) {
-			// (A) GET FORM DATA
-			// var form = document.getElementById("form-"+updown+"-"+id);
-			var formData = new FormData();
-			formData.append("postID", id);
-			formData.append("type", updown);
-
-			// (B) FETCH
-			fetch("http://localhost:8090/test", {
-				method: "POST",
-				body: formData,
-			})
-			.then((res) => { return res.text(); })
-			.then((txt) => { console.log(txt); })
-			.catch((err) => { console.log(err); });
-
-			// (C) PREVENT HTML FORM SUBMIT
-			return false;
-		}
-
-	</script>
+</div>
 {{end}}
