--- a/ui/html/header.partial.tmpl
+++ b/ui/html/header.partial.tmpl
@@ -61,8 +61,8 @@
 				  </div>
 			</form>
 	</div>
-</nav> -->
-
+</nav>
+ -->
 
 <!-- HEADER LOGGED IN -->
 <!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
