--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -164,7 +164,6 @@ html {
     min-height: 100%;
   }
   .content-inside {
-    padding: 140px;
     padding-bottom: 50px;
     top: 50%;
     width: 100%;
@@ -172,6 +171,10 @@ html {
   }
 
 /*LOG IN PAGE*/
+
+.loginboxcontent {
+    padding: 140px;
+}
 
 .loginbox {
     max-width: 310px;
