--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -1,35 +1,37 @@
 {{template "base" .}}
 {{define "body"}}
-<div class=loginbox>
-	<div class="iconbox">
-		<span class="iconboxspan">
-			<img src="/static/css/images/logo_white.png">
-		</span>
-		<form method="post" class="loginform">
-			{{with .Form}}
-			<div>
-				{{with .Errors.Get "generic"}}
-					<label class='error'>{{.}}</label>
-				{{end}}
-				<label class="form-label" for="username"></label>
-				<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
-				{{with .Errors.Get "username"}}
-					<label class='error'>{{.}}</label>
-				{{end}}
-			</div>
-			<div>
-					<label class="form-label" for="pass"></label>
-					<input class="form-control" type="password" id="pass" name="password" placeholder="Password">
-					{{with .Errors.Get "password"}}
+<div class="loginboxcontent">
+	<div class=loginbox>
+		<div class="iconbox">
+			<span class="iconboxspan">
+				<img src="/static/css/images/logo_white.png">
+			</span>
+			<form method="post" class="loginform">
+				{{with .Form}}
+				<div>
+					{{with .Errors.Get "generic"}}
 						<label class='error'>{{.}}</label>
 					{{end}}
-			</div>
-			<input class="btn loginbtn" type="submit" value="Log In">
-			<div class="registerlink">
-				<a href="/register" >New user? Register</a>
-			</div>
-		</form>
-	<div>
+					<label class="form-label" for="username"></label>
+					<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
+					{{with .Errors.Get "username"}}
+						<label class='error'>{{.}}</label>
+					{{end}}
+				</div>
+				<div>
+						<label class="form-label" for="pass"></label>
+						<input class="form-control" type="password" id="pass" name="password" placeholder="Password">
+						{{with .Errors.Get "password"}}
+							<label class='error'>{{.}}</label>
+						{{end}}
+				</div>
+				<input class="btn loginbtn" type="submit" value="Log In">
+				<div class="registerlink">
+					<a href="/register" >New user? Register</a>
+				</div>
+			</form>
+		<div>
+	</div>
 </div>
 {{end}}
 {{end}}
