--- a/ui/html/register.page.tmpl
+++ b/ui/html/register.page.tmpl
@@ -1,49 +1,51 @@
 {{template "base".}}
 {{define "body"}}
-<div class=loginbox>
-	<div class="iconbox">
-		<span class="iconboxspan">
-			<img src="/static/css/images/logo_white.png">
-		</span>
-		<form method="post" class="std auth loginform">
-			{{with .Form}}
-			<div>
-				<label class="form-label" for="username"></label>
-				<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
-				{{with .Errors.Get "username"}}
+<div class="loginboxcontent">
+	<div class=loginbox>
+		<div class="iconbox">
+			<span class="iconboxspan">
+				<img src="/static/css/images/logo_white.png">
+			</span>
+			<form method="post" class="std auth loginform">
+				{{with .Form}}
+				<div>
+					<label class="form-label" for="username"></label>
+					<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
+					{{with .Errors.Get "username"}}
+						<label class="error">{{.}}</label>
+					{{end}}
+				</div>
+		
+				<div>
+					<label class="form-label" for="email"></label>
+					<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{.Get "email"}}">
+					{{with .Errors.Get "email"}}
 					<label class="error">{{.}}</label>
-				{{end}}
-			</div>
+					{{end}}
+				</div>
 		
-			<div>
-				<label class="form-label" for="email"></label>
-				<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{.Get "email"}}">
-				{{with .Errors.Get "email"}}
-				<label class="error">{{.}}</label>
-				{{end}}
-			</div>
+				<div>
+					<label class="form-label" for="pass"></label>
+					<input class="form-control" type="password" id="pass" name="password" placeholder="Password">
+					{{with .Errors.Get "password"}}
+					<label class="error">{{.}}</label>
+					{{end}}
+				</div>
+				<div>
+					<label class="form-label" for="pass"></label>
+					<input class="form-control" type="password" id="pass" placeholder="Comfirm password" name="confirm_password">
+					{{with .Errors.Get "password"}}
+					<label class="error">{{.}}</label>
+					{{end}}
+				</div>
 		
-			<div>
-				<label class="form-label" for="pass"></label>
-				<input class="form-control" type="password" id="pass" name="password" placeholder="Password">
-				{{with .Errors.Get "password"}}
-				<label class="error">{{.}}</label>
+				<input class="btn loginbtn" type="submit" value="Sign Up">
+				<div class="registerlink">
+					<a href="/login" >Already registered? Log In</a>
+				</div>
 				{{end}}
-			</div>
-			<div>
-				<label class="form-label" for="pass"></label>
-				<input class="form-control" type="password" id="pass" placeholder="Comfirm password" name="confirm_password">
-				{{with .Errors.Get "password"}}
-				<label class="error">{{.}}</label>
-				{{end}}
-			</div>
-		
-			<input class="btn loginbtn" type="submit" value="Sign Up">
-			<div class="registerlink">
-				<a href="/login" >Already registered? Log In</a>
-			</div>
-			{{end}}
-		</form>
-	<div>
+			</form>
+		<div>
+	</div>
 </div>
 {{end}}
