--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -1,5 +1,13 @@
 {{template "base" .}}
 
+{{define "head"}}
+<script type="module">
+    import Tags from "https://cdn.jsdelivr.net/npm/bootstrap5-tags@1/tags.min.js";
+    Tags.init("select");
+</script>
+{{end}}
+
+
 {{define "body"}}
 	<h2>Create a post</h2>
 	<form method="POST" id="threadform" action="/submit" enctype="multipart/form-data">
@@ -31,7 +39,7 @@
 		<!-- Category tagging -->
 		<div class="mb-3">
 			<label class="form-label">Tags</label>
-			<select class="select form-control" multiple data-mdb-filter="true" name="category" required>
+			<select class="form-select form-control" id="tags-input" name="category" required multiple data-allow-clear="true" data-show-all-suggestions="true" data-max="5">
 				{{range .Categories}}
 				<option value="{{.Title}}">{{.Title}}</option>
 				{{end}}
@@ -56,5 +64,11 @@
 	const wordcount = document.querySelector("#words_count");
 	textcount.innerHTML = areatext;
 	};
+
+	var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+	var checkedOne = Array.prototype.slice.call(checkboxes).some(x => x.checked);
+	console.log(checkedOne)
 </script>
+
+
 {{end}}
