--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -297,3 +297,9 @@ border:1px solid #45ffdb;
     align-self: center;
    justify-self: center;
   }
+
+  .form-control {
+    border: 3px solid #45ffdb; 
+    border-radius: 4px; 
+    background-color: #f8f8f8d8
+  }
