--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -2,67 +2,74 @@
 
 {{define "head"}}
 <script type="module">
-    import Tags from "https://cdn.jsdelivr.net/npm/bootstrap5-tags@1/tags.min.js";
-    Tags.init("select");
+	import Tags from "https://cdn.jsdelivr.net/npm/bootstrap5-tags@1/tags.min.js";
+	Tags.init("select");
 </script>
 {{end}}
 
 
 {{define "body"}}
-	<h2>Create a post</h2>
-	<form method="POST" id="threadform" action="/submit" enctype="multipart/form-data">
-		<!-- Thread title -->
-		<div class="mb-3">
-			<label class="form-label">Title</label>
-			<input class="form-control" type="text" required name="title" placeholder="Post title" value="" maxlength="30" />
-		</div>
+<h2>Create a post</h2>
+<form method="POST" id="threadform" action="/submit" enctype="multipart/form-data">
+	<!-- Thread title -->
+	<div class="mb-3">
+		<label class="form-label">Title</label>
+		<input class="form-control" type="text" required name="title" placeholder="Post title" value="" maxlength="30"
+			 />
+	</div>
 
-		<!-- Content textarea -->
-		<div class="mb-3">
-			<label class="form-label">Content</label>
-			<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500" placeholder="Maximum 500 characters" required></textarea>
-			<div class="d-flex justify-content-end">
-				<span id="words_count" class="badge bg-secondary rounded-pill">
-					<span id="textcount">0</span>/500
-				</span>
-			</div>
+	<!-- Content textarea -->
+	<div class="mb-3">
+		<label class="form-label">Content</label>
+		<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500"
+			placeholder="Maximum 500 characters" required
+			></textarea>
+		<div class="d-flex justify-content-end">
+			<span id="words_count" class="badge bg-secondary rounded-pill">
+				<span id="textcount">0</span>/500
+			</span>
 		</div>
-		<div id="textarea_count" class="badge pull-right"></div>
+	</div>
+	<div id="textarea_count" class="badge pull-right"></div>
 
-		<!-- Image upload -->
-		<div class="mb-3">
-			<label class="form-label">Upload Image</label>
-			<div class="input-group">
-				<input type="file" class="form-control" id="inputGroupFile01" name="myFile">
-			</div>
+	<!-- Image upload -->
+	<div class="mb-3">
+		<label class="form-label">Upload Image</label>
+		<div class="input-group">
+			<input type="file" class="form-control" id="inputGroupFile01" name="myFile"
+				>
 		</div>
-		<!-- Category tagging -->
-		<div class="mb-3">
-			<label class="form-label">Tags</label>
-			<select class="form-select form-control" id="tags-input" name="category" required multiple data-allow-clear="true" data-show-all-suggestions="true" data-max="5">
-				{{range .Categories}}
-				<option value="{{.Title}}">{{.Title}}</option>
-				{{end}}
-			</select>
-		</div>
+	</div>
+	<!-- Category tagging -->
+	<div class="mb-3">
+		<label class="form-label">Tags</label>
+		<select class="form-select form-control" id="tags-input" name="category" required multiple
+			data-allow-clear="true" data-show-all-suggestions="true" data-max="5"
+			>
+			{{range .Categories}}
+			<option value="{{.Title}}">{{.Title}}</option>
+			{{end}}
+		</select>
+	</div>
 
-		<!-- Sumbit button -->
-		<div class="mb-3">
-			<button type="submit" class="btn btn-primary" name="submitPost">Submit</button>
-		</div>
+	<!-- Sumbit button -->
+	<div class="mb-3">
+		<button type="submit" class="btn btn-primary btn-lg"
+			style="background-color:#45ffdb; color:#1A1A1B;margin-top: 0.8em;" name="submitPost">Submit</button>
+	</div>
 
-	</form>
+</form>
 
 {{end}}
 
 {{define "js"}}
 <script type="text/javascript">
-	function charactercount(){
-	const areatextarea = document.querySelector("#postcontent");
-	const areatext = document.querySelector("#postcontent").value.length;
-	const textcount = document.querySelector("#textcount");
-	const wordcount = document.querySelector("#words_count");
-	textcount.innerHTML = areatext;
+	function charactercount() {
+		const areatextarea = document.querySelector("#postcontent");
+		const areatext = document.querySelector("#postcontent").value.length;
+		const textcount = document.querySelector("#textcount");
+		const wordcount = document.querySelector("#words_count");
+		textcount.innerHTML = areatext;
 	};
 
 	var checkboxes = document.querySelectorAll('input[type="checkbox"]');
