--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -269,24 +269,24 @@ border:1px solid #45ffdb;
   }
 
 
-  .comment-comments {
+  .post-comments {
     grid-column-start: 2;
     order: 5;
   }
-  .comment-downvote {
+  .post-downvote {
     order: 4;
     align-self: center;
    justify-self: center;
   }
 
-  .comment-upvote {
+  .post-upvote {
     align-self: center;
    justify-self: center;
   }
-  .comment-username {
+  .post-username {
     order: 1;
   }
-  .comment-title {
+  .post-title {
     grid-row: span 2;
     order: 3;
     font-size: x-large;
