--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -3,12 +3,12 @@
 
 {{with .Post}}
 <div class="div">
-    <div class="post" id="{{.ID}}">
+    <div class="post-card" id="{{.ID}}">
 		{{if $.AuthenticatedUser}}
 		<div class="post-upvote">
 			<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
 				<input value="{{.ID}}" hidden>
-				<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button', 'post')">
+				<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button')">
 					<i class="bi bi-caret-up"></i>
 				</button>
 			</form>
@@ -16,7 +16,7 @@
 		<div class="post-downvote">
 			<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
 				<input value="{{.ID}}" hidden>
-				<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button', 'post')">
+				<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button')">
 					<i class="bi bi-caret-down"></i>
 				</button>
 			</form>
@@ -70,13 +70,13 @@
 {{end}}
 <div class="row row-cols-md-1 g-2 justify-content-center">
     {{range .Comments}}
-	<div class="col" id="{{.ID}}">
-		<div class="card border-primary comment-card h-100">
+	<div class="col" >
+		<div class="card border-primary comment-card h-100" id="{{.ID}}">
 			<div class="row no-gutters">
 				<div class="col-md-2">
 					<form id="comment-up-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'up')">
 						<input value="{{.ID}}" hidden>
-						<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button', 'comment')">
+						<button type="submit" class="btn btn-primary up-button" onclick="vote('{{.ID}}', 'up-button')">
 							<i class="bi bi-caret-up"></i>
 						</button>
 					</form>
@@ -85,7 +85,7 @@
 
 					<form id="comment-down-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'down')">
 						<input value="{{.ID}}" hidden>
-						<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button', 'comment')">
+						<button type="submit" class="btn btn-primary down-button" onclick="vote('{{.ID}}', 'down-button')">
 							<i class="bi bi-caret-down"></i>
 						</button>
 					</form>
