--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -54,7 +54,7 @@
 <div>
     <form method="POST">
         <label for="comment">Comment</label>
-        <textarea name="comment" id="" cols="30" rows="10"></textarea>
+        <textarea name="comment" id="" cols="30" rows="10" required></textarea>
         {{if $.AuthenticatedUser}}
         <button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
     </form>
