commented out non-mandatory bits (amount of comments on posts and amount of threads on categories)

--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -16,9 +16,9 @@
 					<a href="/category/{{.Title}}"><h5 class="card-title">{{.Title}}</h5></a>
 					<p class="card-text">{{.Description}}</p>
 				</div>
-				<div class="card-footer">
+				<!-- <div class="card-footer">
 					<small class="text-muted">341 active threads</small>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		{{end}}
