--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -41,7 +41,7 @@
 			<div class="post-username">Posted by {{.User}}</div>
 			<p name="votes" class="votes" value="0">{{.Votes}}</p>
 			<div class="post-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
-			<div class="post-comments">8 comments</div>
+			<!-- <div class="post-comments">8 comments</div> -->
 	</div>
     {{with .ImageSrc}}
     <img class="postimg" src="/static/{{.}}" alt="" >
