--- a/ui/html/showcat.page.tmpl
+++ b/ui/html/showcat.page.tmpl
@@ -56,7 +56,7 @@
 			<div class="post-username">Posted by {{.User}}</div>
 			<p name="votes" class="votes" value="0">{{.Votes}}</p>
 			<div class="post-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
-			<div class="post-comments">8 comments</div>
+			<!-- <div class="post-comments">8 comments</div> -->
 	</div>
 	{{end}}
 </div>
