--- a/ui/html/400.page.tmpl
+++ b/ui/html/400.page.tmpl
@@ -1,7 +1,20 @@
 {{template "base"}}
 {{define "body"}}
-<div>
-<h1>404um [ˈfɔː/əʊ/ˈfɔːrəm]</h1>
-<h4>Forum not found.</h4>
-</div>
+    <div class="errorcontentoutside">
+        <div class="errorcontent">
+            <div class="shade">
+                <div class="fourofour">
+                    <h1>404</h1>
+                </div>
+    
+                <div class="errortext">
+                    <h2>Ooops! You weren't supposed to see this</h2>
+                </div>
+    
+                <div class="returntext">
+                    <h3>Go <a class="lowerh3a" href="/">BACK</a> and remember: you haven't seen anything.</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 {{end}}
