--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -42,7 +42,7 @@ label {
 
 .navbar.header {
     background-color: #1A1A1B;
-    border:1px solid #676869;
+    border-bottom:1px solid #676869;
     min-width: 542px;
 }
 
@@ -140,11 +140,12 @@ label {
 /*FOOTER */
 .footer {
     background-color: #1A1A1B;
-    border:1px solid #676869;
+    border-top:1px solid #676869;
     margin-top: auto !important;
     color: whitesmoke;
     line-height: 50px;
     padding: 0 20px;
+    min-width: 434px;
   }
 
   .inside-footer {
@@ -177,8 +178,6 @@ html {
     min-height: 100%;
   }
   .content-inside {
-    padding-bottom: 50px;
-    top: 50%;
     width: 100%;
     height: 100%;
   }
@@ -246,6 +245,63 @@ border:1px solid #45ffdb;
 }
 
 /*SIGN UP PAGE*/
+
+/* ERROR PAGE */
+
+.errorcontentoutside {
+    padding-top: 19px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute; 
+}
+
+.errorcontent {
+    background-image: url("/static/css/images/vscbackground.png");
+    /* background: #1A1A1B; */
+    border-radius: 50%;
+    width: 700px;
+    height: 700px;
+    justify-content: center;
+    border:1px solid #676869;
+}
+
+.shade {
+    border-radius: 50%;
+    width: 700px;
+    height: 700px;
+    justify-content: center;
+    color: whitesmoke;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.fourofour h1 {
+    font-size: 140px;
+    color: whitesmoke;
+    text-align: center;
+    padding-top: 90px;
+}
+
+.errortext h2 {
+    font-size: 40px;
+    color: whitesmoke;
+    text-align: center;
+    padding-top: 30px;  
+}
+
+.returntext h3 {
+    font-size: 20px;
+    color: whitesmoke;
+    text-align: center;
+    padding: 70px;
+}
+
+.lowerh3a {
+    color: #45ffdb;
+    text-decoration: none;
+}
+
+/* /////// */
 
 .up-button.active {
 	background-color: green
