Fixed unauthorized comment voting, profile posts and internal error checking

--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -3,7 +3,7 @@
 
 {{with .Post}}
 <div class="div">
-    <div class="post-card" id="post{{.ID}}">
+	<div class="post-card" id="post{{.ID}}">
 		{{if $.AuthenticatedUser}}
 		<div class="post-upvote">
 			<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
@@ -38,45 +38,47 @@
 		</div>
 		{{end}}
 
-			<div class="post-username">Posted by {{.User}}</div>
-			<p name="votes" class="votes" value="0">{{.Votes}}</p>
-			<div class="post-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
-			<!-- <div class="post-comments">8 comments</div> -->
+		<div class="post-username">Posted by {{.User}}</div>
+		<p name="votes" class="votes" value="0">{{.Votes}}</p>
+		<div class="post-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
+		<!-- <div class="post-comments">8 comments</div> -->
 	</div>
-    {{with .ImageSrc}}
-    <img class="postimg" src="/static/{{.}}" alt="" >
-    {{end}}
-    {{if eq $.Post.User $.User.Name}}
-    <a href="/edit/{{.ID}}">Edit</a>
-    <a href="/delete/{{.ID}}" data-method="delete" data-confirm="Are you sure?">Delete</a>
-    {{end}}
+	{{with .ImageSrc}}
+	<img class="postimg" src="/static/{{.}}" alt="">
+	{{end}}
+	{{if eq $.Post.User $.User.Name}}
+	<a href="/edit/{{.ID}}">Edit</a>
+	<a href="/delete/{{.ID}}" data-method="delete" data-confirm="Are you sure?">Delete</a>
+	{{end}}
 </div>
 <div>
-    <form method="POST">
-        <label for="comment">Comment</label>
-        <textarea name="comment" id="" cols="30" rows="10" required></textarea>
-        {{if $.AuthenticatedUser}}
-        <button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
-    </form>
-        {{else}}
-    </form>
-        <form action="/login">
-            <button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
-        </form>
+	<form method="POST">
+		<label for="comment">Comment</label>
+		<textarea name="comment" id="" cols="30" rows="10" required></textarea>
+		{{if $.AuthenticatedUser}}
+		<button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
+	</form>
+	{{else}}
+	</form>
+	<form action="/login">
+		<button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
+	</form>
 
-        {{end}}
+	{{end}}
 
 </div>
 {{end}}
 <div class="row row-cols-md-1 g-2 justify-content-center">
-    {{range .Comments}}
-	<div class="col" >
+	{{range .Comments}}
+	<div class="col">
 		<div class="card border-primary comment-card h-100" id="comment{{.ID}}">
 			<div class="row no-gutters">
 				<div class="col-md-2">
+					{{if $.AuthenticatedUser}}
 					<form id="comment-up-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'up')">
 						<!-- <input value="{{.ID}}" hidden> -->
-						<button type="submit" class="btn btn-primary up-button" onclick="vote('comment{{.ID}}', 'up-button')">
+						<button type="submit" class="btn btn-primary up-button"
+							onclick="vote('comment{{.ID}}', 'up-button')">
 							<i class="bi bi-caret-up"></i>
 						</button>
 					</form>
@@ -85,10 +87,28 @@
 
 					<form id="comment-down-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'down')">
 						<!-- <input value="{{.ID}}" hidden> -->
-						<button type="submit" class="btn btn-primary down-button" onclick="vote('comment{{.ID}}', 'down-button')">
+						<button type="submit" class="btn btn-primary down-button"
+							onclick="vote('comment{{.ID}}', 'down-button')">
 							<i class="bi bi-caret-down"></i>
 						</button>
 					</form>
+					{{else}}
+						<!-- <input value="{{.ID}}" hidden> -->
+						<a href="/login">
+							<button type="submit" class="btn btn-primary up-button">
+								<i class="bi bi-caret-up"></i>
+							</button>
+						</a>
+
+					<p name="votes" class="votes" value="0">{{.Votes}}</p>
+
+						<!-- <input value="{{.ID}}" hidden> -->
+						<a href="/login">
+							<button type="submit" class="btn btn-primary down-button">
+								<i class="bi bi-caret-down"></i>
+							</button>
+						</a>
+					{{end}}
 				</div>
 				<div class="col-md-10">
 					<div class="card-body">
@@ -97,39 +117,40 @@
 				</div>
 			</div>
 			{{if eq .User $.User.Name}}
-				<div class="card-footer">
-					<a href="" data-toggle="modal" data-target="#exampleModal">Edit</a>
-					<a href="/deletecomment/{{.ID}}">Delete</a>
-				</div>
+			<div class="card-footer">
+				<a href="" data-toggle="modal" data-target="#exampleModal">Edit</a>
+				<a href="/deletecomment/{{.ID}}">Delete</a>
+			</div>
 			{{end}}
 		</div>
 	</div>
 
 
 	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
 		<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-			<h5 class="modal-title" id="exampleModalLabel">Edit comment</h5>
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			</button>
-			</div>
-			<div class="modal-body">
-				<form method="POST">
-					<label for="comment">Comment</label>
-					<textarea name="commentUpdate" id="" cols="30" rows="10">{{.Content}}</textarea>
-					<textarea name="commentUpdateID" id="" cols="0" rows="0" hidden>{{.ID}}</textarea>
-					<textarea name="commentUpdateUser" id="" cols="0" rows="0" hidden>{{.User}}</textarea>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" class="btn btn-primary" name="submitPost">Save changes</button>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Edit comment</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form method="POST">
+						<label for="comment">Comment</label>
+						<textarea name="commentUpdate" id="" cols="30" rows="10">{{.Content}}</textarea>
+						<textarea name="commentUpdateID" id="" cols="0" rows="0" hidden>{{.ID}}</textarea>
+						<textarea name="commentUpdateUser" id="" cols="0" rows="0" hidden>{{.User}}</textarea>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							<button type="submit" class="btn btn-primary" name="submitPost">Save changes</button>
 						</div>
-				</form>
-			</div>
+					</form>
+				</div>
 
-		</div>
+			</div>
 		</div>
 	</div>
 	{{end}}
@@ -138,8 +159,13 @@
 {{end}}
 
 {{define "js"}}
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+	integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+	integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+	integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	crossorigin="anonymous"></script>
 {{end}}
-
