--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -253,7 +253,7 @@ border:1px solid #45ffdb;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    position: absolute; 
+    position: absolute;
 }
 
 .errorcontent {
@@ -286,7 +286,7 @@ border:1px solid #45ffdb;
     font-size: 40px;
     color: whitesmoke;
     text-align: center;
-    padding-top: 30px;  
+    padding-top: 30px;
 }
 
 .returntext h3 {
@@ -355,7 +355,13 @@ border:1px solid #45ffdb;
   }
 
   .form-control {
-    border: 3px solid #45ffdb; 
-    border-radius: 4px; 
+    border: 3px solid #45ffdb;
+    border-radius: 4px;
     background-color: #f8f8f8d8
+  }
+
+  /* Profile */
+
+  .activity {
+      padding-bottom: 100px;
   }
