--- a/ui/html/header.partial.tmpl
+++ b/ui/html/header.partial.tmpl
@@ -31,7 +31,7 @@
 	  <a class="navbar-brand header" href="/">
 		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
 			<form class="d-flex">
-					<div class="dropdown headerf">
+<!-- 					<div class="dropdown headerf">
 						<button class="btn inheader btn-secondary dropdown-toggle bi-bell" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
 						</button>
 						<ul class="dropdown-menu dropdown-large comment w-100 headerf dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
@@ -40,7 +40,7 @@
 						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
 						</ul>
 
-					  </div>
+					  </div> -->
 
 				<div class="dropdown header">
 					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
